# session-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  shell.nix
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
admin_portal/: .dockerignore  .env.example  .prettierrc  Dockerfile  README.md  biome.json  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
admin_portal/src/: App.tsx  config.ts  index.css
admin_portal/src/components/: Alert.tsx  BulkEmailModal.tsx  CalendarView.tsx  FormComponents.tsx  Layout.tsx  Modal.tsx  ProtectedRoute.tsx  Sidebar.tsx
admin_portal/src/context/: AuthContext.tsx
admin_portal/src/lib/: api.ts  export.ts  utils.ts
admin_portal/src/pages/: AttendanceRoll.tsx  Blocks.tsx  Child.tsx  CreateSession.tsx  Dashboard.tsx  EditSession.tsx  Exclusions.tsx  LocationDetail.tsx  Locations.tsx  Login.tsx  SessionCalendar.tsx  SessionDetail.tsx  Sessions.tsx  Staff.tsx  Students.tsx  Terms.tsx
admin_portal/src/services/: api.ts
admin_portal/src/types/: index.ts
admin_portal/tests/: README.md
admin_portal/tests/e2e/: api.spec.ts  attendance.spec.ts  auth.spec.ts  dashboard.spec.ts  helpers.ts  locations-terms.spec.ts  sessions.spec.ts
backend/: Dockerfile  README.md  alembic.ini  coverage.json  coverage.xml  entrypoint.sh  pyproject.toml
backend/alembic/versions/: add_session_blocks_001.py
backend/app/: __init__.py  __main__.py  admin_auth.py  auth.py  config.py  db.py  logging.py  main.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0001_block_baseline.py  0002_initial_views.py  0003_improve_child_reporting.py
backend/app/db/migrations/: script.py.mako
backend/app/db/migrations/versions/: 2026-01-28_initial_setup_7d1116be1b34.py
backend/app/db/models/: __init__.py  attendance.py  caregiver.py  caregiver_auth.py  child.py  exclusion_date.py  session.py  session_block.py  session_block_link.py  session_location.py  session_occurrence.py  session_staff.py  signup.py  staff.py  types.py
backend/app/domains/admin/: guards.py
backend/app/domains/admin/controllers/: __init__.py  blocks.py  exclusions.py  locations.py  occurrences.py  sessions.py  signups.py  staff.py  students.py
backend/app/domains/admin/schemas/: block.py  exclusion.py  location.py  occurrences.py  session.py  signup.py  staff.py  student.py
backend/app/domains/admin/services/: block.py  exclusion.py  location.py  occurrences.py  session.py  signup.py  staff.py  student.py
backend/app/domains/caregiver/: deps.py
backend/app/domains/caregiver/controllers/: auth.py  caregiver.py  signup.py  students.py
backend/app/domains/caregiver/services/: caregiver.py  signup.py
backend/app/domains/public/controllers/: health.py  sessions.py
backend/app/domains/public/schemas/: health.py  session.py
backend/app/lib/: deps.py  email.py  exceptions.py  newsletter.py  rate_limit.py  schema.py  settings.py  validation.py  worker.py
backend/app/middleware/: rate_limit.py  trace_sanitizer.py
backend/app/models/: __init__.py  attendance.py  attendance_audit.py  base.py  caregiver.py  caregiver_auth.py  child.py  child_note.py  exclusion_date.py  session.py  session_block.py  session_block_link.py  session_location.py  session_occurrence.py  session_staff.py  signup.py  staff.py  types.py  view_base.py  views.py
backend/app/routes/: __init__.py  admin.py  admin_auth.py  auth.py  caregiver.py  health.py  public.py  staff_admin.py
backend/app/schemas/: __init__.py  admin.py  auth.py  caregiver.py  common.py  session.py  signup.py  staff.py
backend/app/server/: asgi.py  core.py  plugins.py
backend/app/services/: __init__.py  calendar.py  email.py  newsletter.py  signup_emails.py
backend/app/templates/email/: magic_link_login.html  magic_link_login.txt  session_change_alert.html  session_change_alert.txt  session_missed_followup.html  session_missed_followup.txt  session_reminder.html  session_reminder.txt  session_term_info.html  session_term_info.txt  signup_confirmation.html  signup_confirmation.txt  waitlist_confirmed.html  waitlist_confirmed.txt
backend/app/utils/: engine_factory.py  oauth.py
backend/tests/: conftest.py  data_fixtures.py  factories.py
backend/tests/integration/: test_admin_endpoints.py  test_admin_routes.py  test_api_versioning.py  test_caregiver.py  test_caregiver_routes.py  test_opentelemetry.py  test_public_routes.py
frontend/: .dockerignore  Dockerfile  astro.config.mjs  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/public/: security.txt
frontend/src/components/: DonateModal.astro  Header.astro  Map.astro  SignupForm.astro
frontend/src/components/home/: HomeSessionsList.astro
frontend/src/data/: signups.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts
frontend/src/pages/: account.astro  index.astro  signup.astro
frontend/src/pages/auth/: login.astro
frontend/src/pages/sessions/: [id].astro
frontend/src/scripts/: sessions-map.ts
frontend/tests/: README.md
frontend/tests/e2e/: auth-integration.spec.ts  authenticated-flows.spec.ts  test-auth-simple.spec.ts
