[project]
name = "tuhura-sessions"
version = "0.1.0"
description = "Backend API for Tūhura Tech Sessions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[jinja,opentelemetry,jwt,pydantic]>=2.19.0",
    "litestar-saq[otel,hiredis]>=0.6.3",
    "redis>=5.0.0",
    "httpx-oauth>=0.16.1",
    "advanced-alchemy>=1.8.2",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "uvicorn>=0.40.0",
    "anyio>=4.12.1",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "ty>=0.0.11",
  "ruff>=0.0.287",
]
test = [
  "pytest",
  "pytest-xdist",
  "pytest-mock",
  "pytest-cov",
  "coverage[toml]",
  "pytest-sugar",
  "pytest-asyncio>=0.23",
  "pytest-databases[postgres]>=0.1.0",
  "polyfactory",
  "aiosqlite",
  "asyncpg",
]

[tool.coverage.report]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover',
  "if __name__ == .__main__.:",
  'def __repr__',
  'if self\.debug:',
  'if settings\.DEBUG',
  'raise AssertionError',
  'raise NotImplementedError',
  'if 0:',
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]
omit = ["*/tests/*"]
show_missing = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
omit = ["**/*/tests/*", "**/*/migrations/**/*.py", "tools/*"]
parallel = true
relative_files = true

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml",
  "--cov-fail-under=65",
  "--tb=short",
  "-v",
  "-ra",
  "-n",
  "auto",                      # Enable xdist with auto-detected worker count
]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::DeprecationWarning:aiosql.*",
  "ignore::DeprecationWarning:litestar.constants.*",
  "ignore::DeprecationWarning:litestar.utils.*",
  "ignore::DeprecationWarning:litestar.cli.*",
  "ignore::DeprecationWarning:httpx._client",
]
markers = [
  "unit: marks tests as unit tests (fast, isolated)",
  "integration: marks tests as integration tests (slower, database)",
  "slow: marks tests as slow running tests",
  "auth: marks tests related to authentication",
  "email: marks tests that send emails",
  "external: marks tests that call external services",
  "oauth: marks tests related to OAuth functionality",
  "services: marks tests for service layer",
  "models: marks tests for database models",
  "endpoints: marks tests for API endpoints",
  "security: marks tests for security features",
  "teams: marks tests related to team functionality",
]
python_classes = ["Test*"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  '__pycache__',
  "src/py/app/db/migrations/versions/*.py",
]
fix = true
line-length = 120
src = ["src/py", "src/py/tests"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
  "D100",    # pydocstyle - missing docstring in public module
  "D101",    # pydocstyle - missing docstring in public class
  "D102",    # pydocstyle - missing docstring in public method
  "D103",    # pydocstyle - missing docstring in public function
  "D104",    # pydocstyle - missing docstring in public package
  "D105",    # pydocstyle - missing docstring in magic method
  "D107",    # pydocstyle - missing docstring in __init__
  "D205",    # pydocstyle - 1 blank line required between summary line and description
  "D417",    # pydocstyle - missing argument descriptions in docstring
  "COM812",  # Conflicts with formatter
  "ISC001",  # Conflicts with formatter
  "ANN001",  # Missing type annotation for function argument
  "ANN201",  # Missing return type annotation for public function
  "ANN204",  # Missing return type annotation for special method `__init__`
  "ANN003",  # Missing type annotation for **kwargs
  "ANN401",  # Dynamically typed expressions (Any) are disallowed
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "FBT003",  # Boolean positional value in function call
  "PLR0913", # Too many arguments
  "PLR0912", # Too many branches
  "PLR2004", # Magic value used in comparison
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
  "BLE001",  # Do not catch blind exception: `Exception`
  "TRY400",  # Use `logging.exception` instead of `logging.error`
  "TRY003",  # Avoid specifying long messages outside the exception class
  "EM102",   # Exception must not use an f-string literal
  "G004",    # Logging statement uses f-string
  "G201",    # Logging `.exception(...)` should be used instead of `.error(..., exc_info=True)`
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "S101",    # Use of assert detected
  "S105",    # Possible hardcoded password
  "S110",    # try-except-pass detected
  "SIM108",  # Use ternary operator
  "RUF001",  # String contains ambiguous character
  "RUF005",  # Consider unpacking instead of concatenation
  "RUF012",  # Mutable class attributes should be annotated with ClassVar
  "RUF059",  # Unpacked variable is never used
  "N803",    # Argument name should be lowercase
  "N815",    # Variable in class scope should not be mixedCase
  "E402",    # Module level import not at top of file
  "E501",    # Line too long (handled by formatter)
  "F841",    # Local variable assigned to but never used
  "INP001",  # File is part of an implicit namespace package
  "PLC0415", # import should be at the top-level of a file
  "B007",    # Loop control variable not used within loop body
  "B904",    # Within an except clause, raise exceptions with raise ... from err
  "PERF401", # Use a list comprehension to create a transformed list
  "C901",    # Function is too complex
  "ERA001",  # Found commented-out code
  "T201",    # print found
  "DTZ005",  # datetime.now() called without a tz argument
  "DTZ011",  # datetime.date.today() used
  "A001",    # Variable is shadowing a Python builtin
  "SLF001",  # Private member accessed
]
select = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['F401', 'D104']
"tests/*.py" = ['D103', 'S101', 'D104', "PLR2004", "RUF029", "ARG001", "SLF001", "DOC", "ANN", "S", "D101", "D102", "TC002", "ERA001", "A002", "T201", "RUF059", "PT013"]
"tests/**/*.py" = ['D103', 'S101', 'D104', "PLR2004", "RUF029", "ARG001", "SLF001", "DOC", "ANN", "S", "D101", "D102", "TC002", "ARG002", "ERA001", "A002", "D205", "T201", "RUF059", "FBT001", "FBT002", "PLR0913"]
"tests/conftest.py" = ["D100", "E402", "F821", "W291", "PLC0415"]
"tests/data_fixtures.py" = ["D100"]
"alembic/versions/*.py" = ["ANN201", "INP001", "D103", "D104"]
"app/worker.py" = ["DTZ005", "PLR0913", "ARG001", "G004", "PLC0415", "BLE001", "C901", "PLR0912", "PLR0915"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "sqlalchemy.ext.declarative.declared_attr",
  "sqlalchemy.orm.declared_attr.directive",
  "sqlalchemy.orm.declared_attr",
]

[tool.ruff.lint.isort]
known-first-party = ['tests', 'app']

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
